--- a/src/assets/styles/layouts/bodyaftervideo.css
+++ b/src/assets/styles/layouts/bodyaftervideo.css
@@ -1,3 +1,155 @@
+.companies_logo {
+  margin-top: 2em;
+  padding: 2em;
+  background-color: white;
+}
+
+.companyname {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.companyname img {
+  width: 6em;
+}
+
+.companyexplain {
+  margin-top: 1em;
+  text-align: center;
+  color: grey;
+}
+
+.design__story {
+  margin-top: 5em;
+  background-color: white;
+  text-align: center;
+  font-size: 1.8rem;
+}
+
+.viewbutton {
+  align-items: flex-start;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 0.8em;
+  margin: 1em 4em 0 3em;
+}
+.viewbutton button {
+  outline: none;
+  border: none;
+  padding: 0.85em;
+  border-radius: 0.5em;
+  color: black;
+  font-size: 1rem;
+  margin: 1em;
+}
+.viewbutton button:hover {
+  background-color: grey;
+  transition: 0.4s ease-in-out;
+  color: black;
+}
+
+.button__video {
+  padding: 2em;
+  background-image: linear-gradient(rgb(136, 210, 245), rgb(24, 110, 238));
+  margin: 0 4em 1em 4em;
+  border-radius: 0.9rem;
+}
+.button__video video {
+  width: 100%;
+  border-radius: 0.9rem;
+}
+
+.story__view {
+  text-align: center;
+  font-size: 1.3rem;
+}
+.story__view h3 {
+  margin-bottom: 1em;
+}
+.story__view p {
+  line-height: 1.5em;
+  color: rgb(80, 79, 79);
+}
+
+.creativity {
+  margin-top: 12em;
+  text-align: center;
+  font-size: 1.5rem;
+}
+.creativity p {
+  margin-top: 1em;
+  line-height: 1.5em;
+  color: rgb(80, 79, 79);
+}
+
+.videoandparagraph {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  margin: 5em 3em 0 3em;
+}
+.videoandparagraph img {
+  height: 60vh;
+  width: 100%;
+  border-radius: 0.8rem;
+  box-shadow: 0 0 5px gray;
+}
+
+.imageparagraph {
+  width: 40em;
+  border-radius: 0.9em;
+}
+
+.paragraph {
+  width: 30em;
+  padding: 1em;
+}
+.paragraph h3 {
+  font-size: 1.6rem;
+  margin-bottom: 1em;
+}
+.paragraph p {
+  line-height: 1.5em;
+  color: rgb(77, 76, 76);
+}
+
+.tell__design__story {
+  height: 70vh;
+  margin-top: 5em;
+  background-image: url("https://overflow.io/assets/public-site-v2/images/cta-bg-01.png?v=1680461635535");
+  background-repeat: no-repeat;
+  background-size: auto;
+  padding: 3em;
+}
+.tell__design__story h1 {
+  font-size: 3rem;
+}
+.tell__design__story p {
+  font-size: 1.5rem;
+  color: grey;
+}
+.tell__design__story button {
+  margin-top: 3em;
+  background-color: black;
+  color: white;
+  padding: 1em;
+  border-radius: 0.5em;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: none;
+}
+.tell__design__story button:hover {
+  transition: 0.5s ease-in-out;
+  transform: translateY(-8%);
+}
+
+#downheading {
+  margin-bottom: 1em;
+}
+
 .discover__superpower {
   padding: 2em;
   margin-top: 7em;
@@ -6,6 +158,7 @@
   font-size: 3.5rem;
   line-height: 1em;
 }
+
 .superpower__cards__wrapper {
   margin-top: 3em;
   display: flex;
@@ -14,6 +167,7 @@
   flex-wrap: wrap;
   margin-bottom: 1em;
 }
+
 .superpower__card {
   padding: 1em;
   margin: 1em;
@@ -22,6 +176,14 @@
   border-radius: 0.8em;
   text-align: center;
 }
+.superpower__card h4 {
+  font-size: 1.5rem;
+  margin-bottom: 0.4em;
+}
+.superpower__card img {
+  width: 100%;
+}
+
 .superpower__text {
   display: none;
   padding: 1em;
@@ -32,13 +194,7 @@
   text-align: center;
   transition: 0.4s ease-in-out;
 }
-.superpower__card h4 {
-  font-size: 1.5rem;
-  margin-bottom: 0.4em;
-}
-.superpower__card img {
-  width: 100%;
-}
+
 .webdesigner__saying {
   display: flex;
   align-items: flex-start;
@@ -46,9 +202,11 @@
   padding: 2em;
   flex-wrap: wrap-reverse;
 }
+
 .webdesigner h4 {
   font-size: 3rem;
 }
+
 .webdesigner__words {
   display: flex;
   align-items: center;
@@ -56,12 +214,14 @@
   padding: 2em;
   flex-wrap: wrap;
 }
+
 .webdesigner__photo {
   width: 18em;
 }
 .webdesigner__photo img {
   width: 100%;
 }
+
 .webdesigner__purewords {
   width: 40em;
 }
@@ -76,6 +236,7 @@
   color: gray;
   font-size: 1.2rem;
 }
+
 .wow__effect {
   margin-top: 5em;
   padding: 2em;
@@ -84,11 +245,12 @@
   font-size: 3rem;
   font-weight: bolder;
 }
-.wow__effect h1 ::after {
+.wow__effect h1::after {
   content: "Wow";
   background-color: rgb(3, 177, 162);
   color: white;
 }
+
 .wow__designs {
   padding: 1em;
   display: flex;
@@ -96,6 +258,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .wow__cards {
   padding: 1em;
   margin: 1em;
@@ -105,6 +268,7 @@
 .wow__cards img {
   width: 100%;
 }
+
 .wow__button button {
   background-color: black;
   color: white;
@@ -118,6 +282,7 @@
   transition: 0.5s ease-in-out;
   transform: translateY(-5%);
 }
+
 .details__wrapper {
   display: flex;
   align-items: center;
@@ -125,20 +290,24 @@
   flex-wrap: wrap;
   margin-top: 5em;
 }
+
 .products__details ul {
   list-style: none;
   color: grey;
   line-height: 3em;
 }
+
 .products__details ul li:hover {
   transition: 0.4s ease-in-out;
   color: black;
   cursor: pointer;
 }
+
 .products__details:last-child p {
   margin: 3em 0 3em 0;
   color: grey;
 }
+
 .products__details:last-child input {
   background-color: rgb(231, 231, 231);
   border: none;
@@ -147,6 +316,7 @@
   font-size: 1.1rem;
   border-radius: 0.8em;
 }
+
 .products__details:last-child button {
   background-color: black;
   color: white;
@@ -157,10 +327,12 @@
   border: none;
   margin: 1em;
 }
+
 .products__details:last-child button:hover {
   transition: 0.5s ease-in-out;
   transform: translateY(-5%);
 }
+
 .products__details:last-child .icons {
   margin-top: 3em;
   display: flex;
@@ -168,16 +340,12 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+
 .icons i {
   font-size: 1.2rem;
 }
 .icons i:hover {
   color: rgb(6, 142, 206);
-}
-.footer {
-  padding: 1em;
-  text-align: center;
-  color: rgb(233, 232, 232);
 }
 
 @media screen and (max-width: 500px) {
@@ -206,3 +374,28 @@
     font-size: 0.8rem;
   }
 }
+@media screen and (max-width: 500px) {
+  .design__story,
+  .tell__design__story p {
+    font-size: 1rem;
+  }
+  .creativity {
+    font-size: 1rem;
+  }
+  .story__view {
+    font-size: 1rem;
+  }
+  .tell__design__story h1 {
+    font-size: 2rem;
+  }
+  .tell__design__story button {
+    font-size: 0.8rem;
+  }
+  .videodisplay {
+    padding: 1em;
+  }
+  .button__video {
+    padding: 0.2em;
+    margin: 0 1em 0em 1em;
+  }
+}/*# sourceMappingURL=bodyaftervideo.css.map */
